<resources>
    <string name="app_name">Quiz Android</string>

    <!-- activity_quiz.xml -->
    <string name="text_questao">Questão Android</string>
    <string name="btn_verdadeiro">Verdadeiro</string>
    <string name="btn_falso">Falso</string>
    <string name = "correct_toast"> Você acertou, parabéns! :) </string>
    <string name = "incorrect_toast"> Ops, essa você errou. :/ </string>

    <!-- activity_results_main.xml -->
    <string name="text_resultado">acertos</string>
    <string name="text_de_acertos">de acertos</string>
    <string name="btn_reiniciar">Reiniciar</string>

</resources>