<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResultsActivity">


    <TextView
        android:id="@+id/textResultadoPorcentagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/text_resultado"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textStringAcertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/text_de_acertos"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:background="#2C2B2B"
        android:text="@string/btn_reiniciar"
        android:textAllCaps="false"
        android:textColor="#FBF8F8"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="normal" />
</LinearLayout>