<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".QuizActivity">


        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#EDECEC"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">


            <TextView
                android:id="@+id/textPergunta"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="#00AAAAAA"
                android:text="@string/text_questao"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#3A3A3A"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <Button
                    android:id="@+id/btnVerdadeiro"
                    android:layout_width="135dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="#6FD3D1D1"
                    android:backgroundTint="#03FFFFFF"
                    android:text="@string/btn_verdadeiro"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnFalso"
                    android:layout_width="135dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="#6FD3D1D1"
                    android:backgroundTint="#03FFFFFF"
                    android:text="@string/btn_falso"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

            </LinearLayout>




        </androidx.cardview.widget.CardView>

</LinearLayout>